Fixed the bottom cover image not stretching on xl-screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4483,6 +4483,7 @@ footer nav ul li a{
 #prefer{
   background-color: $white;
   background-image: asset-url('acca-3.png');
+  background-size: cover;
   text-align: center;
   color: #fff;
 }
